--- a/SlideCreater/ViewControls/MegaSlidePreviewer.xaml
+++ b/SlideCreater/ViewControls/MegaSlidePreviewer.xaml
@@ -17,16 +17,16 @@
                 <slidecreater:SlideContentPresenter x:Name="key"></slidecreater:SlideContentPresenter>
             </StackPanel>
         </Viewbox>
-        <Grid Grid.Row="1">
+        <Grid Grid.Row="1" Background="#272727">
             <StackPanel Orientation="Horizontal">
-                <Label FontWeight="Bold" VerticalAlignment="Center">Postset:</Label>
-                <Label Name="postset" VerticalAlignment="Center"></Label>
-                <Label FontWeight="Bold" Margin="10,0,0,0" VerticalAlignment="Center">Number:</Label>
-                <Label Name="number" VerticalAlignment="Center"></Label>
-                <Label FontWeight="Bold" Margin="0,0,0,0" VerticalAlignment="Center">Creates:</Label>
-                <Label VerticalAlignment="Center">[</Label>
+                <Label Foreground="White" FontWeight="Bold" VerticalAlignment="Center">Postset:</Label>
+                <Label Foreground="White" Name="postset" VerticalAlignment="Center"></Label>
+                <Label Foreground="White" FontWeight="Bold" Margin="10,0,0,0" VerticalAlignment="Center">Number:</Label>
+                <Label Foreground="White" Name="number" VerticalAlignment="Center"></Label>
+                <Label Foreground="White" FontWeight="Bold" Margin="0,0,0,0" VerticalAlignment="Center">Creates:</Label>
+                <Label Foreground="White" VerticalAlignment="Center">[</Label>
                 <TextBlock Name="creates" TextAlignment="Center" VerticalAlignment="Center"></TextBlock>
-                <Label VerticalAlignment="Center">]</Label>
+                <Label Foreground="White" VerticalAlignment="Center">]</Label>
             </StackPanel>
         </Grid>
     </Grid>
